untitled/objects/Party__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Forum_Case__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Role__c</fullName>
        <label>Party Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Party_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>p-{000}</displayFormat>
        <label>Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>